style(colors): fix agressive dark mode

--- a/src/static/themes/default/styles/user-menu.scss
+++ b/src/static/themes/default/styles/user-menu.scss
@@ -52,7 +52,7 @@
         height: 28px;
         border-radius: 50%;
         background-color: var(--color-gray-100);
-        border: 2px solid var(--config-background-color);
+        border: 2px solid var(--color-gray-50);
         display: flex;
         align-items: center;
         justify-content: center;
