--- a/src/ui/react/settings/components/navigation/index.module.css
+++ b/src/ui/react/settings/components/navigation/index.module.css
@@ -174,7 +174,7 @@
     .email {
       font-size: 0.7rem;
       line-height: 1em;
-      color: var(--color-gray-200);
+      color: var(--color-fixed-gray-200);
     }
   }
 
